FIX: Prevent jump in reaction hover

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -465,6 +465,7 @@ $float-height: 530px;
     .chat-message-reaction-list {
       position: relative;
       margin-top: 0.25em;
+      display: flex;
 
       .reaction-users-list {
         position: absolute;
@@ -481,7 +482,7 @@ $float-height: 530px;
         display: inline-block;
         vertical-align: top;
         padding: 0.25em 0.5em;
-        margin: 1px 2px 1px 0;
+        margin: 1px 0.25em 1px 0;
         font-size: var(--font-down-2);
         border-radius: 4px;
         border: 1px solid var(--primary-low);
@@ -509,7 +510,7 @@ $float-height: 530px;
       }
       .chat-message-react-btn {
         vertical-align: top;
-        padding: 0.25em 0.5em;
+        padding: 0em 0.25em;
         background: none;
         border: none;
 
